scenery/tests/errors/invalid-anchor-ref-name.typ
// expected: anchor reference name must not be empty
#import "/lib.typ": anchor-ref
#anchor-ref("", anchor: "center")
